# wgpu-tutorials

./: Cargo.toml
src/: main.rs
tutorial1_window/: Cargo.toml  index.html
tutorial1_window/src/: lib.rs
tutorial2_surface/: Cargo.toml
tutorial2_surface/src/: lib.rs
tutorial3_pipeline/: Cargo.toml
tutorial3_pipeline/src/: lib.rs  shader.wgsl
tutorial4_buffer/: Cargo.toml
tutorial4_buffer/src/: lib.rs
tutorial5_textures/: Cargo.toml
tutorial5_textures/src/: lib.rs
tutorial6_uniforms/: Cargo.toml
tutorial6_uniforms/src/: lib.rs  shader.wgsl
tutorial6_uniforms/src/camera/: mod.rs
tutorial7_instancing/: Cargo.toml
tutorial7_instancing/src/: lib.rs
tutorial7_instancing/src/camera/: controller.rs
tutorial8_depth/: Cargo.toml
tutorial8_depth/src/: lib.rs  shader.wgsl  texture.rs
tutorial9_models/: Cargo.toml
tutorial9_models/src/: lib.rs  model.rs  resources.rs  texture.rs
tutorial9_models/src/camera/: mod.rs
