[workspace]

members = ["tutorial1_window", "tutorial2_surface", "tutorial3_pipeline", "tutorial4_buffer", "tutorial5_textures", "tutorial6_uniforms", "tutorial7_instancing", "tutorial8_depth", "tutorial9_models"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4.22"
env_logger = "0.11.4"
winit = "0.29.15"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
