[package]
name = "tutorial7_instancing"
version = "0.1.0"
edition = "2021"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies]
cfg-if.workspace = true 
env_logger.workspace = true 
winit.workspace = true 
log.workspace = true 
wgpu.workspace = true 
pollster.workspace = true
bytemuck.workspace = true
cgmath.workspace = true