[package]
name = "tutorial9_models"
version = "0.1.0"
edition = "2021"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies]
cfg-if.workspace = true 
env_logger.workspace = true 
winit.workspace = true 
log.workspace = true 
wgpu.workspace = true 
pollster.workspace = true
bytemuck.workspace = true
cgmath.workspace = true
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
tobj.workspace = true
